--- a/roles/babar/tasks/main.yml
+++ b/roles/babar/tasks/main.yml
@@ -1,6 +1,15 @@
 ---
 - name: remove default conf
   file: state=absent path=/etc/nginx/conf.d/default.conf
+  notify: reload-nginx
+
+- name: remove default site conf
+  file: path=/etc/nginx/conf.d/default state=absent
+  notify: reload-nginx
+
+- name: remove default site conf
+  file: path=/etc/nginx/sites-available/default state=absent
+  notify: reload-nginx
 
 - name: add server main listener
   template: src=etc/nginx/conf.d/babar.conf dest=/etc/nginx/conf.d/babar.conf
